--- a/influencer.html
+++ b/influencer.html
@@ -6,22 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e3a36821b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <Header class="header">
-        <nav>
-            <span class="headline">
+    <Header>
+        <nav class="header">
+            <article>
+                <span class="headline">
                 <h3>Influencer  products</h3>
-            </span>
-            <span class="anchor">
-                <a href="">Home</a>
-                <a href="">Products</a>
-                <a href="">Sign up</a>
-                <a href="">Log in</a>
-                <a href=""><i class="fas fa-search"></i></a>
-            </span>
-            <span><a href=""><i id="cart" class=" fas fa-shopping-cart"></i></a></span>
-            <span class="menu"><i class="fas fa-bars"></i></span>
+                </span>
+            </article>
+            <article>
+                <span class="anchor">
+                    <a href="">Home</a>
+                    <a href="">Products</a>
+                    <a href="">Sign up</a>
+                    <a href="">Log in</a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                </span>
+                <span class="menu">
+                    <a href=""><i id="cart" class=" fas fa-shopping-cart"></i>
+                    </a><i class="fas fa-bars"></i>
+                </span>
+            </article>
         </nav>
     </Header>
 </body>
